--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 libp2p = { version = "0.55", features = ["identify"] }
+thiserror = "2.0"
 
 [dev-dependencies]
 tempfile = "3.17"
