--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-libp2p = { version = "0.55", features = ["identify"] }
+libp2p = { version = "0.55", features = ["identify", "macros", "kad"] }
 thiserror = "2.0"
 
 [dev-dependencies]
