--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ libp2p = { version = "0.55", features = [
 ] }
 thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
+rand = "0.9"
+sha2 = "0.10"
 
 [dev-dependencies]
 tempfile = "3.17"
