--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
 rand = "0.9"
 sha2 = "0.10"
+crossbeam-channel = "0.5"
 
 [dev-dependencies]
 tempfile = "3.17"
