--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tokio = { version = "1", features = ["full"] }
 rand = "0.9"
 sha2 = "0.10"
 crossbeam-channel = "0.5"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3.17"
