--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ sha2 = "0.10"
 crossbeam-channel = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = "0.4"
 
 [dev-dependencies]
 tempfile = "3.17"
