--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ libp2p = { version = "0.55", features = [
   "yamux",
   "request-response",
   "gossipsub",
+  "serde",
 ] }
 thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
