--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ libp2p = { version = "0.55", features = [
   "request-response",
   "gossipsub",
   "serde",
+  "cbor",
 ] }
 thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
@@ -24,6 +25,9 @@ crossbeam-channel = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
+async-trait = "0.1"
+futures = "0.3"
+bincode = "1.3"
 
 [dev-dependencies]
 tempfile = "3.17"
