--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ chrono = "0.4"
 async-trait = "0.1"
 futures = "0.3"
 bincode = "1.3"
+ark-std = "0.5"
+ark-bls12-381 = "0.5"
 
 [dev-dependencies]
 tempfile = "3.17"
