--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ futures = "0.3"
 bincode = "1.3"
 ark-std = "0.5"
 ark-bls12-381 = "0.5"
+threshold_crypto = "0.4"
+dashmap = "6.1"
 
 [dev-dependencies]
 tempfile = "3.17"
