--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,19 +19,18 @@ libp2p = { version = "0.55", features = [
 ] }
 thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
-rand = "0.9"
 sha2 = "0.10"
-crossbeam-channel = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
 async-trait = "0.1"
 futures = "0.3"
-bincode = "1.3"
 ark-std = "0.5"
 ark-bls12-381 = "0.5"
-threshold_crypto = "0.4"
 dashmap = "6.1"
+vrf = "0.2"
+p256 = { version = "0.13", features = [] }
+rand_core = "0.6" # Required by p256, can't upgrade
 
 [dev-dependencies]
 tempfile = "3.17"
