--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ dashmap = "6.1"
 vrf = "0.2"
 p256 = { version = "0.13", features = [] }
 rand_core = "0.6" # Required by p256, can't upgrade
+mockall = "0.13"
 
 [dev-dependencies]
 tempfile = "3.17"
