--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ vrf = "0.2"
 p256 = { version = "0.13", features = [] }
 rand_core = "0.6" # Required by p256, can't upgrade
 mockall = "0.13"
+log = "0.4"
 
 [dev-dependencies]
 tempfile = "3.17"
