--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,17 +22,14 @@ tokio = { version = "1", features = ["full"] }
 sha2 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-chrono = "0.4"
-async-trait = "0.1"
 futures = "0.3"
-ark-std = "0.5"
-ark-bls12-381 = "0.5"
 dashmap = "6.1"
 vrf = "0.2"
 p256 = { version = "0.13", features = [] }
 rand_core = "0.6" # Required by p256, can't upgrade
 mockall = "0.13"
 log = "0.4"
+rand = "0.9"
 
 [dev-dependencies]
 tempfile = "3.17"
