--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,10 @@ dashmap = "6.1"
 vrf = "0.2"
 p256 = { version = "0.13", features = [] }
 rand_core = "0.6" # Required by p256, can't upgrade
-mockall = "0.13"
 log = "0.4"
 rand = "0.9"
 curv-kzen = "0.10"
 
 [dev-dependencies]
 tempfile = "3.17"
+mockall = { version = "0.13", features = ["nightly"] }
