--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ rand_core = "0.6" # Required by p256, can't upgrade
 log = "0.4"
 rand = "0.9"
 curv-kzen = "0.10"
+bincode = { version = "2.0", features = ["serde"] }
 
 [dev-dependencies]
 tempfile = "3.17"
