--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ rand = "0.9"
 curv-kzen = "0.10"
 bincode = { version = "2.0", features = ["serde"] }
 mockall = { version = "0.13", features = ["nightly"] }
+async-trait = "0.1"
 
 [dev-dependencies]
 tempfile = "3.17"
