--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ curv-kzen = "0.10"
 bincode = { version = "2.0", features = ["serde"] }
 mockall = { version = "0.13", features = ["nightly"] }
 async-trait = "0.1"
+chrono = "0.4"
 
 [dev-dependencies]
 tempfile = "3.17"
