feat: add ECIES keypair generation functionality
- Introduce ECIES (Elliptic Curve Integrated Encryption Scheme) module
- Implement key pair generation, secret/public key access
- Add initial test coverage for key generation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ curv-kzen = "0.10"
 bincode = { version = "2.0", features = ["serde"] }
 mockall = { version = "0.13", features = ["nightly"] }
 async-trait = "0.1"
+ecies = "0.2"
 
 [dev-dependencies]
 tempfile = "3.17"
