--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ bincode = { version = "2.0", features = ["serde"] }
 mockall = { version = "0.13", features = ["nightly"] }
 async-trait = "0.1"
 ecies = "0.2"
+libsecp256k1 = "0.7"
 
 [dev-dependencies]
 tempfile = "3.17"
