--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install Rust
       uses: dtolnay/rust-toolchain@56f84321dbccf38fb67ce29ab63e4754056677e0
       with:
-        toolchain: stable
+        toolchain: nightly
 
     - name: Install tarpaulin
       run: cargo install cargo-tarpaulin
