feat: implement committee election using VRF
- Add k256 and libecvrf-k256 dependencies for VRF functionality
- Create committee election module with seed generation and verification
- Add committee info abstraction to track epoch and members
- Implement election cycle timing via configurable epoch durations
- Support election request/response protocol via gossipsub
- Remove outdated VRF proof implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ mockall = { version = "0.13", features = ["nightly"] }
 async-trait = "0.1"
 ecies = "0.2"
 libsecp256k1 = "0.7"
+k256 = { version = "0.13", features = ["hash2curve", "arithmetic"] }
+libecvrf-k256 = "1.1"
 
 [dev-dependencies]
 tempfile = "3.17"
