--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ ecies = "0.2"
 libsecp256k1 = "0.7"
 k256 = { version = "0.13", features = ["hash2curve", "arithmetic"] }
 libecvrf-k256 = "1.1"
+xxhash-rust = { version = "0.8", features = ["xxh3"] }
 
 [dev-dependencies]
 tempfile = "3.17"
