chore: install build dependencies on Linux runners
- Add essential build tools setup step in CI workflow
- Ensure build-essential package is available for compilation
- Only run on Linux runners using conditional execution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Install build dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential
+      if: runner.os == 'Linux'
+
     - name: Cache Rust dependencies
       id: cache
       uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684
