--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
 
     - name: Install tarpaulin
       run: |
+        export PATH="$HOME/.cargo/bin:$PATH"
         if ! command -v cargo-tarpaulin >/dev/null 2>&1; then
           cargo install cargo-tarpaulin
         fi
