feat: add secp256k1 support to libp2p
- Enable the secp256k1 feature for cryptographic key operations
- Adds support for ECDSA signatures using the secp256k1 curve

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ libp2p = { version = "0.55", features = [
   "gossipsub",
   "serde",
   "cbor",
+  "secp256k1",
 ] }
 thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
