refactor: improve GitHub Actions CI workflow
- Simplify runner selection with a conditional expression
- Reorganize steps for better readability and efficiency
- Improve conditional logic for test mode execution
- Fix command execution and error handling in build dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,35 +2,23 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   test-and-coverage:
-    name: Run Tests & Generate Coverage
-    runs-on: ${{ steps.determine-runner.outputs.runner }}
-    
+    runs-on: >
+      ${{ contains(github.event.pull_request.labels.*.name, 'self-hosted') && 'self-hosted' ||
+          contains(github.event.pull_request.labels.*.name, 'ubuntu-latest') && 'ubuntu-latest' ||
+          vars.DEFAULT_RUNNER || 'ubuntu-latest' }}
+
     steps:
-      - name: Determine runner
-        id: determine-runner
-        run: |
-          if [[ "${{ contains(github.event.pull_request.labels.*.name, 'self-hosted') }}" == "true" ]]; then
-            echo "runner=self-hosted" >> $GITHUB_OUTPUT
-          elif [[ "${{ contains(github.event.pull_request.labels.*.name, 'ubuntu-latest') }}" == "true" ]]; then
-            echo "runner=ubuntu-latest" >> $GITHUB_OUTPUT
-          else
-            echo "runner=${{ vars.DEFAULT_RUNNER || 'ubuntu-latest' }}" >> $GITHUB_OUTPUT
-          fi
-      
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Rust (nightly)
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: nightly
-          
       - name: Cache Rust dependencies
         uses: actions/cache@v4
         with:
@@ -40,22 +28,28 @@ jobs:
             ~/.cargo/bin
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
+          restore-keys: |
+            ${{ runner.os }}-cargo-
 
-      - name: Install build dependencies (self-hosted only)
-        if: contains(runner.name, 'self-hosted')
+      - name: Install build dependencies
+        if: contains(github.event.pull_request.labels.*.name, 'self-hosted')
         run: |
-          if ! pkg-config --version &>/dev/null; then
+          if ! pkg-config --version; then
             sudo apt-get update
             sudo apt-get install -y build-essential libssl-dev pkg-config libgmp-dev
           fi
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@v2
         with:
           tool: cargo-llvm-cov
-          
-      - name: Determine test mode
+
+      - name: Set test mode
         id: test-mode
         run: |
           if [[ "${{ contains(github.event.pull_request.labels.*.name, 'unit-tests-only') }}" == "true" ]]; then
@@ -65,7 +59,12 @@ jobs:
           fi
 
       - name: Run tests and generate coverage
-        run: cargo llvm-cov --lcov --output-path lcov.info ${{ steps.test-mode.outputs.mode == 'lib' && '--lib' || '' }}
+        run: |
+          if [ "${{ steps.test-mode.outputs.mode }}" == "lib" ]; then
+            cargo llvm-cov --lcov --output-path lcov.info --lib
+          else
+            cargo llvm-cov --lcov --output-path lcov.info
+          fi
 
       - name: Upload coverage to Codacy
         uses: codacy/codacy-coverage-reporter-action@master
