chore: set CI to always use ubuntu-latest runner
- Temporarily pin CI to ubuntu-latest for debugging
- Comment out conditional runner selection logic

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,10 @@ on:
 
 jobs:
   test-and-coverage:
-    runs-on: >
-      ${{ contains(github.event.pull_request.labels.*.name, 'self-hosted') && 'self-hosted' ||
-          contains(github.event.pull_request.labels.*.name, 'ubuntu-latest') && 'ubuntu-latest' ||
-          vars.DEFAULT_RUNNER || 'ubuntu-latest' }}
+    runs-on: ubuntu-latest # debug
+      # ${{ contains(github.event.pull_request.labels.*.name, 'self-hosted') && 'self-hosted' ||
+      #     contains(github.event.pull_request.labels.*.name, 'ubuntu-latest') && 'ubuntu-latest' ||
+      #     vars.DEFAULT_RUNNER || 'ubuntu-latest' }}
 
     steps:
       - name: Checkout code
