chore: support self-hosted runners via PR label
- Update GitHub workflow configuration to run jobs on self-hosted
  runners when a PR has the 'self-hosted' label
- Maintain fallback to DEFAULT_RUNNER variable or ubuntu-latest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,9 @@ on:
 
 jobs:
   test-and-coverage:
-    runs-on: ${{ vars.DEFAULT_RUNNER || 'ubuntu-latest' }}
+    runs-on: >
+      ${{ contains(github.event.pull_request.labels.*.name, 'self-hosted') && 'self-hosted' ||
+          vars.DEFAULT_RUNNER || 'ubuntu-latest' }}
 
     steps:
       - name: Checkout code
