--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,7 @@ on:
 
 jobs:
   test-and-coverage:
-    runs-on: >
-      ${{ contains(github.event.pull_request.labels.*.name, 'self-hosted') && 'self-hosted' ||
-          vars.DEFAULT_RUNNER || 'ubuntu-latest' }}
+    runs-on: ${{ vars.DEFAULT_RUNNER || 'ubuntu-latest' }}
 
     steps:
       - name: Checkout code
