--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,14 @@ libecvrf-k256 = "1.1"
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 blake3 = "1.8"
 trait-variant = "0.1.2"
+generic-array = "1.2"
+ark-ff = "0.5"
+ark-ec = "0.5"
+ark-secp256k1 = "0.5"
 
 [dev-dependencies]
 tempfile = "3.17"
+hex = "0.4"
+rstest = "0.25"
+num-bigint = "0.4"
+num-traits = "0.2"
