--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ generic-array = "1.2"
 ark-ff = "0.5"
 ark-ec = "0.5"
 ark-secp256k1 = "0.5"
+statrs = "0.18"
 
 [dev-dependencies]
 tempfile = "3.17"
