--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,6 @@ ecies = "0.2"
 libsecp256k1 = "0.7"
 k256 = { version = "0.13", features = ["hash2curve", "arithmetic"] }
 libecvrf-k256 = "1.1"
-xxhash-rust = { version = "0.8", features = ["xxh3"] }
 blake3 = "1.8"
 trait-variant = "0.1.2"
 generic-array = "1.2"
@@ -43,6 +42,8 @@ ark-ff = "0.5"
 ark-ec = "0.5"
 ark-secp256k1 = "0.5"
 statrs = "0.18"
+crossbeam = "0.8"
+crossbeam-skiplist = "0.1"
 
 [dev-dependencies]
 tempfile = "3.17"
