--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ mockall = { version = "0.13", features = ["nightly"] }
 async-trait = "0.1"
 ecies = "0.2"
 libsecp256k1 = "0.7"
-k256 = { version = "0.13", features = ["hash2curve", "arithmetic"] }
+k256 = { version = "0.13", features = ["arithmetic"] }
 libecvrf-k256 = "1.1"
 blake3 = "1.8"
 trait-variant = "0.1.2"
@@ -47,7 +47,7 @@ crossbeam-skiplist = "0.1"
 
 [dev-dependencies]
 tempfile = "3.17"
-hex = "0.4"
 rstest = "0.25"
 num-bigint = "0.4"
 num-traits = "0.2"
+hex = "0.4"
