feat: implement secp256r1 support for VRF
- Add VRF implementation for P-256 curve (secp256r1)
- Create curve-specific Config implementation for secp256r1
- Add tests with test vectors to verify functionality
- Reorganize VRF trait structure for better extensibility

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ generic-array = "1.2"
 ark-ff = "0.5"
 ark-ec = "0.5"
 ark-secp256k1 = "0.5"
+ark-secp256r1 = "0.5"
+ark-serialize = "0.5"
 statrs = "0.18"
 crossbeam = "0.8"
 crossbeam-skiplist = "0.1"
@@ -51,4 +53,3 @@ rstest = "0.25"
 num-bigint = "0.4"
 num-traits = "0.2"
 hex = "0.4"
-ark-secp256r1 = "0.5"
