--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ ark-ec = "0.5"
 ark-secp256k1 = "0.5"
 ark-secp256r1 = "0.5"
 ark-serialize = "0.5"
+ark-std = "0.5"
 statrs = "0.18"
 crossbeam = "0.8"
 crossbeam-skiplist = "0.1"
