chore: add ark-serialize as dependency for ark-secp256k1
- Enable ark-serialize when ark-secp256k1 feature is active

--- a/serialize/Cargo.toml
+++ b/serialize/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 
 [features]
 libp2p = ["dep:libp2p"]
-ark-secp256k1 = ["dep:ark-secp256k1"]
+ark-secp256k1 = ["dep:ark-secp256k1", "dep:ark-serialize"]
 
 [dependencies]
 libp2p = { version = "0.56", optional = true }
