--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,7 +4,11 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-civita-serialize = { path = "../serialize" }
+civita-serialize = { path = "../serialize", features = [
+  "libp2p",
+  "ark-secp256k1",
+] }
+civita-serialize-derive = { path = "../serialize-derive" }
 
 libp2p = { version = "0.56", features = [
   "identify",
