--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -20,6 +20,8 @@ libp2p = { version = "0.56", features = [
   "yamux",
   "gossipsub",
   "secp256k1",
+  "request-response",
+  "cbor",
 ] }
 thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
