--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -49,3 +49,8 @@ rstest = "0.25"
 num-bigint = "0.4"
 num-traits = "0.2"
 hex = "0.4"
+criterion = { version = "0.6", features = ["html_reports"] }
+
+[[bench]]
+name = "trie_benchmark"
+harness = false
