--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -42,6 +42,7 @@ statrs = "0.18"
 derivative = "2.2"
 vdf = "0.1"
 parking_lot = "0.12"
+petgraph = "0.8"
 
 [dev-dependencies]
 tempfile = "3.17"
@@ -53,4 +54,8 @@ criterion = { version = "0.6", features = ["html_reports"] }
 
 [[bench]]
 name = "trie_benchmark"
+harness = false
+
+[[bench]]
+name = "dag_benchmark"
 harness = false
