--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 civita-serialize = { path = "../serialize", features = [
   "libp2p",
   "ark-secp256k1",
+  "bigint",
 ] }
 civita-serialize-derive = { path = "../serialize-derive" }
 
@@ -43,10 +44,11 @@ derivative = "2.2"
 vdf = "0.1"
 parking_lot = "0.12"
 petgraph = "0.8"
+num-bigint = "0.4"
+num-traits = "0.2"
+num-integer = "0.1"
 
 [dev-dependencies]
 tempfile = "3.17"
 rstest = "0.25"
-num-bigint = "0.4"
-num-traits = "0.2"
 hex = "0.4"
