--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -44,9 +44,12 @@ derivative = "2.2"
 vdf = "0.1"
 parking_lot = "0.12"
 petgraph = "0.8"
-num-bigint = "0.4"
+num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 num-integer = "0.1"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "2.0"
+multihash = { version = "0.19", features = ["serde"] }
 
 [dev-dependencies]
 tempfile = "3.17"
