Use multihash_derive in Hasher

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -50,6 +50,8 @@ num-integer = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 bincode = { version = "2.0", features = ["serde"] }
 multihash = { version = "0.19", features = ["serde"] }
+multihash-derive = "0.9"
+multihash-codetable = { version = "0.1", features = ["sha2", "sha3", "blake3"] }
 
 [dev-dependencies]
 tempfile = "3.17"
