--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -23,6 +23,7 @@ libp2p = { version = "0.56", features = [
   "secp256k1",
   "request-response",
   "cbor",
+  "serde",
 ] }
 thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
