--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -30,5 +30,6 @@ bincode = { version = "2.0", features = ["serde"] }
 multihash = { version = "0.19", features = ["serde"] }
 multihash-derive = "0.9"
 multihash-codetable = { version = "0.1", features = ["sha2", "sha3", "blake3"] }
+rand = "0.9"
 
 [dev-dependencies]
