--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["core"]
+members = ["core", "cli"]
 resolver = "2"
 
 [workspace.package]
@@ -9,3 +9,4 @@ edition = "2021"
 
 [workspace.dependencies]
 civita-core = { path = "./core" }
+civita-cli = { path = "./cli" }
