--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,3 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+civita-core = { path = "../core" }
+clap = { version = "4.5" }
+base64 = "0.22"
+tokio = { version = "1", features = ["full"] }
