--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,3 +8,5 @@ civita-core = { path = "../core" }
 clap = { version = "4.5" }
 base64 = "0.22"
 tokio = { version = "1", features = ["full"] }
+log = "0.4"
+env_logger = "0.11"
