--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -32,6 +32,7 @@ multihash-derive = "0.9"
 multihash-codetable = { version = "0.1", features = ["sha2", "sha3", "blake3"] }
 rand = "0.9"
 rocksdb = "0.24"
+hex = "0.4"
 
 [dev-dependencies]
 tempfile = "3.23"
