--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["core", "benches"]
+members = ["core"]
 resolver = "2"
 
 [workspace.package]
@@ -9,4 +9,3 @@ edition = "2021"
 
 [workspace.dependencies]
 civita-core = { path = "./core" }
-civita-benches = { path = "./benches" }
