--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ resolver = "2"
 name = "civita"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
 civita-core = { path = "./core" }
