--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -2,6 +2,7 @@
 name = "civita-core"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 libp2p = { version = "0.56", features = [
